--- a/app/src/assets/main.css
+++ b/app/src/assets/main.css
@@ -1,9 +1,34 @@
-/* @import "./base.css"; */
 /* "largely inspired" by Chris Smith:  https://codepen.io/chris22smith/pen/YZPrjr */
 
+/* color for background */
 :root {
-  --main-color: #0c0;
-  --background-color: #000;
+	--grey_color-dark:#111;
+	--grey-color: #222;
+	--grey-color-light: #333;
+	--grey-color-lighter: #444;
+	--background-color: #000;
+}
+
+/* color Theme */
+:root, 
+	:root.green {
+		--main-color: #0c0;
+		--main-color-dark: #090;
+		--main-color-darker: #060;
+		--background-line-color:  rgba(34, 34, 34, 0.6)
+	}
+
+	:root.blue {
+		--main-color: rgb(0, 150, 204);
+		--main-color-dark: rgb(0, 64, 153);
+		--main-color-darker: rgb(0, 22, 102);
+		--background-line-color: rgba(4, 8, 55, 0.6);
+	}
+
+/* mouse selector text */
+::selection {
+	color: var(--background-color);
+	background: var(--main-color-dark);
 }
 
 body {
@@ -16,13 +41,13 @@ body {
   height: 100vh;
   overflow:hidden;
 
-  background-image: radial-gradient(#444, #111);
-  box-shadow: 0 0 2vmin 2vmin var(--background-color) inset;
+  background-image: radial-gradient(var(--grey-color-lighter), var(--grey_color-dark));
+  box-shadow: 0 0 10vmin 2vmin var(--background-color) inset;
   box-sizing: border-box;
 }
 
 body:after {
-	background-image:linear-gradient(transparent, transparent 5px, rgba(34, 34, 34, 0.6));
+	background-image:linear-gradient(transparent, transparent 5px, var(--background-line-color));
 	background-size:6px 6px;
   
 	content:"";
@@ -36,6 +61,7 @@ body:after {
 	z-index:2;
 }
 
+/* color links invert the main color when hover */
 a { 
   color: var(--main-color);
 }
@@ -45,14 +71,15 @@ a:hover {
   color: var(--background-color);
 }
 
+/* pulse color on font: old screen effect */
 @keyframes colorPulse {
 	0%, 100% {
 	  color: var(--main-color);
 	}
 	48%, 52% {
-	  color:#090;
+	  color:var(--main-color-dark);
 	}
 	50% {
-	  color:#060;
+	  color:var(--main-color-darker);
 	}
 }
