SAVE: for school: images by theme in progress

--- a/app/src/assets/theme.css
+++ b/app/src/assets/theme.css
@@ -25,7 +25,7 @@
 		/* for image: f0f000 */
 	}
 
-
+/* 
 .yellow {
 	authentication_logo: url(@/components/icons/WhiskeyRose_yellow.xcf);
 }
@@ -36,4 +36,4 @@
 
 .green {
 	authentication_logo: url(@/components/icons/WhiskeyRose_green.xcf);
-}
+} */
