--- a/app/src/assets/main.css
+++ b/app/src/assets/main.css
@@ -1,4 +1,4 @@
-/* "largely inspired" by Chris Smith:  https://codepen.io/chris22smith/pen/YZPrjr */
+@import "@/assets/theme.css";/* "largely inspired" by Chris Smith:  https://codepen.io/chris22smith/pen/YZPrjr */
 
 /* color for background */
 :root {
