--- a/app/assets/theme.css
+++ b/app/assets/theme.css
@@ -18,7 +18,9 @@
 		--main-color-dark: #0292b9;
 		--main-color-darker: #036b88c4;
 		--main-color-light: #52ceff;
-		--background-line-color: #01546b8f;
+		--background-line-color: #0039498f;
+		/* --background-line-color: rgba(34, 34, 34, 0.6); */
+
 
 		--main-color-op-30: rgba(0, 183, 255, 0.3);
 		--main-color-op-10: rgba(0, 183, 255, 0.1);
@@ -30,7 +32,9 @@
 		--main-color-light: #ffff3a;
 		--main-color-dark: #cfcf03;
 		--main-color-darker: #8f8f00;
-		--background-line-color: #b3b30027;
+		--background-line-color: #83830027;
+		/* --background-line-color: rgba(34, 34, 34, 0.6);1 */
+
 
 		--main-color-op-30: rgba(240, 240, 0, 0.3);
 		--main-color-op-10: rgba(240, 240, 0, 0.1);
