--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -4,69 +4,75 @@
 
 /* color for background */
 :root {
-	--grey-color-dark:#111;
-	--grey-color: #222;
-	--grey-color-light: #333;
-	--grey-color-lighter: #444;
-	--background-color: #000;
+  --grey-color-dark: #111;
+  --grey-color: #222;
+  --grey-color-light: #333;
+  --grey-color-lighter: #444;
+  --background-color: #000;
 }
 
 /* fonts and animations text */
 :root {
-	font-family:'Fira Mono', monospace;
-	animation:colorPulse 6s infinite ease-in-out;
+  font-family: "Fira Mono", monospace;
+  animation: colorPulse 6s infinite ease-in-out;
 
-	background-color: var(--background-color);
-	
-	/* box-sizing: border-box; */
-	overflow:hidden;
-	height: 100%;
+  background-color: var(--background-color);
+
+  /* box-sizing: border-box; */
+  overflow: hidden;
+  height: 100%;
 }
 
-
 body {
-	margin: 0;
-	padding: 0;
-	bottom: 0;
-	height: 100%;
-	width: 100%;
+  margin: 0;
+  padding: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
 }
 
 /* Visual monitor */
 
 /* position static ? TODO a verifier pour que la barre de navigation reste fixe */
 header {
-	width: 100%;
-	position: static; 
-	height: 60%;
+  width: 100%;
+  position: static;
+  height: 60%;
 }
-
 
 /* Global style for all component with animation pulse for blink letters */
 main {
-	background-image: radial-gradient(var(--grey-color-lighter), var(--grey-color-dark));
-	background-image: radial-gradient(var(--grey-color-lighter), var(--background-color));
-	box-shadow: 0 0 10vmin 2vmin var(--background-color) inset;
-	height: 90%;
-	width: 100%;
-	
-	border-top: red;
-	/* TODO check*/
-	position: fixed;
-	overflow: scroll;
+  background-image: radial-gradient(
+    var(--grey-color-lighter),
+    var(--grey-color-dark)
+  );
+  background-image: radial-gradient(
+    var(--grey-color-lighter),
+    var(--background-color)
+  );
+  box-shadow: 0 0 10vmin 2vmin var(--background-color) inset;
+  height: 90%;
+  width: 100%;
+
+  border-top: red;
+  /* TODO check*/
+  position: fixed;
+  overflow: scroll;
 }
 
 /* pulse color on font: old screen effect */
 @keyframes colorPulse {
-	0%, 100% {
-	  color: var(--main-color);
-	}
-	48%, 52% {
-	  color:var(--main-color-dark);
-	}
-	50% {
-	  color:var(--main-color-darker);
-	}
+  0%,
+  100% {
+    color: var(--main-color);
+  }
+  48%,
+  52% {
+    color: var(--main-color-dark);
+  }
+  50% {
+    color: var(--main-color-darker);
+  }
 }
 
 /* @keyframes colorPulse {
@@ -81,21 +87,24 @@ main {
 	}
 } */
 
-
 /* Visual line like old monitor */
 body:after {
-	background-image:linear-gradient(transparent, transparent 5px, var(--background-line-color));
-	background-size:6px 6px;
-  
-	content:"";
-	pointer-events:none;
+  background-image: linear-gradient(
+    transparent,
+    transparent 5px,
+    var(--background-line-color)
+  );
+  background-size: 6px 6px;
 
-	position:absolute;
-	left:0;
-	right:0;
-	bottom:0;
-	top:0;
-	z-index:2;
+  content: "";
+  pointer-events: none;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 2;
 }
 
 /* wave for effects */
@@ -124,17 +133,18 @@ body:after {
 
 /* color links invert the main color when hover */
 
-a:hover, a:visited:hover {
-	background-color: var(--main-color);
-	color: var(--background-color);
-  }
-  
+a:hover,
+a:visited:hover {
+  background-color: var(--main-color);
+  color: var(--background-color);
+}
+
 a:visited {
-	color: var(--main-color);
+  color: var(--main-color);
 }
 
 /* mouse selector text */
 ::selection {
-	color: var(--background-color);
-	background: var(--main-color-dark);
+  color: var(--background-color);
+  background: var(--main-color-dark);
 }
