--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -55,7 +55,10 @@ body {
 header {
   width: 100%;
   position: static;
-  height: 60%;
+  background-image: radial-gradient(
+    var(--grey-color-lighter),
+    var(--background-color)
+  );
 }
 
 /* Global style for all component with animation pulse for blink letters */
@@ -64,10 +67,7 @@ main {
     var(--grey-color-lighter),
     var(--grey-color-dark)
   );
-  background-image: radial-gradient(
-    var(--grey-color-lighter),
-    var(--background-color)
-  );
+
   box-shadow: 0 0 10vmin 2vmin var(--background-color) inset;
   height: 90%;
   width: 100%;
@@ -81,9 +81,14 @@ main {
   flex-direction: column;
 }
 
+.real-body {
+  width: 100%;
+  height: 100%;
+}
+
 /* --------------------------------------------------------------  */
 /* Visual line like old monitor */
-body:after {
+.navbar::after {
   background-image: linear-gradient(
     transparent,
     transparent 5px,
