ADD: form for validate qrCode: need to do: function to check validity

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -121,6 +121,15 @@ li {
 
 /* --------------------------------------------------------------  */
 
+input {
+  background-color: transparent;
+  border-color: var(--main-color);
+  color: var(--main-color);
+  border: solid;
+}
+
+/* --------------------------------------------------------------  */
+
 
 /* wave for effects */
 /* body:before {
