--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -22,6 +22,7 @@
   overflow: hidden;
   height: 100%;
 }
+
 v-app, .v-theme--light {
   background-color: transparent;
   color: var(--main-color);
@@ -71,6 +72,47 @@ body:after {
   bottom: 0;
   top: 0;
   z-index: 2;
+}
+
+/* --------------------------------------------------------------  */
+
+.real-body {
+  width: 100%;
+  height: 100%;
+}
+
+ /* Visual monitor */
+/* position static ? TODO a verifier pour que la barre de navigation reste fixe */
+header {
+  width: 100%;
+  position: static;
+  background-image: radial-gradient(
+    var(--grey-color-lighter),
+    var(--background-color)
+  );
+}
+
+/* Global style for all component with animation pulse for blink letters */
+main {
+  padding: 2em;
+
+  background-image: radial-gradient(
+    var(--grey-color-lighter),
+    var(--grey-color-dark)
+  );
+
+  box-shadow: 0 0 10vmin 2vmin var(--background-color) inset;
+  height: 90%;
+  width: 100%;
+
+  /* TODO check*/
+  position: fixed;
+
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: baseline;
 }
 
 /* --------------------------------------------------------------  */
