ADD: css style global for chat

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -167,9 +167,27 @@ li {
 
 input {
   background-color: transparent;
-  border-color: var(--main-color);
+  border-color: var(--main-color-dark);
   color: var(--main-color);
   border: solid;
+  padding: 0.2rem;
+
+}
+
+input:hover {
+  border-color: var(--main-color-light);
+}
+
+form:focus-visible,
+input:focus-visible,
+form:-moz-focusring,
+input:-moz-focusring {
+  outline: none;
+  border-color: var(--main-color);
+}
+
+input::placeholder {
+  text-align: center;
 }
 
 /* --------------------------------------------------------------  */
