FIX: Match history: Done

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -195,6 +195,12 @@ input::placeholder {
 
 /* --------------------------------------------------------------  */
 
+img {
+  min-height: auto;
+  min-width: auto;
+}
+/* --------------------------------------------------------------  */
+
 
 /* wave for effects */
 /* body:before {
