in progress: user profile

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -198,6 +198,8 @@ input::placeholder {
 img {
   min-height: auto;
   min-width: auto;
+  max-width: max-content;
+  max-height: max-content;
 }
 /* --------------------------------------------------------------  */
 
