--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -196,10 +196,9 @@ input::placeholder {
 /* --------------------------------------------------------------  */
 
 img {
-  min-height: auto;
-  min-width: auto;
-  max-width: max-content;
-  max-height: max-content;
+  height: auto;
+  width: auto;
+
 }
 /* --------------------------------------------------------------  */
 
