--- a/app/assets/profilePage.css
+++ b/app/assets/profilePage.css
@@ -8,11 +8,17 @@
 	display: flex;
 	justify-content: space-between;
 	height: 50%;
-
+	min-height: 200px;
 }
 
 .profile-user-image {
 	display: contents;
+	max-width: 300px;
+	max-height: 300px;
+}
+.profile-user-image img {
+	max-width: 300px;
+	max-height: 300px;
 }
 
 .profile-user-params {
@@ -21,7 +27,6 @@
 }
 
 .profile-match {
-
 	display: flex;
 	width: 100%;
 	height: 50%;
