--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -61,13 +61,13 @@ body {
 /* --------------------------------------------------------------  */
 /* Visual line like old monitor */
 body:after {
-  background: repeating-linear-gradient(
+  /* background: repeating-linear-gradient(
     transparent,
     transparent 5px,
     var(--background-line-color) 6px
   );
   content: "";
-  pointer-events: none;
+  pointer-events: none; */
 
   position: absolute;
   left: 0;
