FIX: ugly scroll bar in chromium, avatar ratio, users in channel displayed after params to secure view, ban users bar fit, virginie fixed profile page buttons in channel

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -196,9 +196,11 @@ input::placeholder {
 /* --------------------------------------------------------------  */
 
 img {
+  display: block;
   height: auto;
-  width: auto;
-
+  width: 100%;
+  overflow: hidden;
+  object-fit: contain;
 }
 /* --------------------------------------------------------------  */
 
